variables.Variables.scala.error
Compilation error:
Variables:7: error: not found: value StepAmount
while (StepAmount!=0) {
       ^Variables:11: error: not found: value dropBAggle
dropBAggle() 
^